--- a/JoF.Rail.Core.Web/Features/Boards/Arrivals.cshtml
+++ b/JoF.Rail.Core.Web/Features/Boards/Arrivals.cshtml
@@ -1,4 +1,7 @@
 ﻿@model JoF.Rail.Standard.Models.LiveDepartureBoard.Result.StationBoardModel
+@{
+    ViewData["Title"] = "Live Arrivals";
+}
 
 @{
     var orderedServices = Model.Services.OrderBy(s => (s.ScheduledTimeArrival ?? s.ScheduledTimeDeparture));
@@ -11,10 +14,10 @@
             <div class="col-8 text-right">
                 @{
                     var parms = new Dictionary<string, string>
-                    {
-                        { "crs", Model.Crs },
-                        { "filterCrs", Model.FilterCrs },
-                    };
+                            {
+                                { "crs", Model.Crs },
+                                { "filterCrs", Model.FilterCrs },
+                            };
                 }
                 <a class="btn btn-primary d-none d-sm-inline" asp-action="Departures" asp-all-route-data="parms">Departures</a>
                 <a class="btn btn-primary d-sm-none" asp-action="Departures" asp-all-route-data="parms">Deps</a>
@@ -68,62 +71,64 @@
         </div>
         @foreach (var service in @Model.Services)
         {
-            <div class="row pb-2 align-items-center">
-                <div class="col-2 text-center">@service.ScheduledTimeArrival</div>
-                <div class="col-3">
-                    @foreach (var dest in service.Origins)
-                    {
-                        <div class="d-block">@dest.Location</div>
-                        @if (dest.Via != null)
-                        {
-                            <small class="indent d-none d-sm-block">
-                                @dest.Via
-                            </small>
-                        }
-                    }
-                </div>
-                <div class="col-2 text-center">@service.EstimatedTimeArrival</div>
-                <div class="col-1 text-center">@service.EstimatedTimeArrivalDelay</div>
-                <div class="col-1 text-center">@service.Platform</div>
-                <div class="col-1 text-center">@service.TrainLength</div>
-                <div class="col-1 text-center">
-                    <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#@service.Guid" aria-expanded="false" aria-controls="collapseExample">
-                        <i class="fas fa-info"></i>
-                    </button>
-                </div>
-            </div>
-
-            @if (service.DelayReason != null || service.CancellationReason != null)
-            {
+            <div class="pb-3">
                 <div class="row pb-2 align-items-center">
-                    <div class="col text-danger">
-                        @if (service.DelayReason != null && service.CancellationReason == null)
+                    <div class="col-2 text-center">@service.ScheduledTimeArrival</div>
+                    <div class="col-3">
+                        @foreach (var dest in service.Origins)
                         {
-                            @service.DelayReason
-                        }
-                        @if (service.CancellationReason != null)
-                        {
-                            @service.CancellationReason
+                            <div class="d-block">@dest.Location</div>
+                            @if (dest.Via != null)
+                            {
+                                <small class="indent d-none d-sm-block">
+                                    @dest.Via
+                                </small>
+                            }
                         }
                     </div>
-                </div>
-            }
-
-            @if (service.IsFilterLocationCancelled)
-            {
-                <div class="row pb-2 align-items-center">
-                    <div class="col text-danger">
-                        <p class="text-danger">No longer stopping at destination</p>
+                    <div class="col-2 text-center">@service.EstimatedTimeArrival</div>
+                    <div class="col-1 text-center">@service.EstimatedTimeArrivalDelay</div>
+                    <div class="col-1 text-center">@service.Platform</div>
+                    <div class="col-1 text-center">@service.TrainLength</div>
+                    <div class="col-1 text-center">
+                        <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#@service.Guid" aria-expanded="false" aria-controls="collapseExample">
+                            <i class="fas fa-info"></i>
+                        </button>
                     </div>
                 </div>
-            }
 
-            <div class="collapse" id="@service.Guid">
-                @{
-                    ViewData["Here"] = Model.Location;
-                    ViewData["There"] = Model.FilterLocation;
+                @if (service.DelayReason != null || service.CancellationReason != null)
+                {
+                    <div class="row pb-2 align-items-center">
+                        <div class="col text-danger">
+                            @if (service.DelayReason != null && service.CancellationReason == null)
+                            {
+                                @service.DelayReason
+                            }
+                            @if (service.CancellationReason != null)
+                            {
+                                @service.CancellationReason
+                            }
+                        </div>
+                    </div>
                 }
-                <partial name="_TrainServiceDetails" model="service" , view-data="ViewData" />
+
+                @if (service.IsFilterLocationCancelled)
+                {
+                    <div class="row pb-2 align-items-center">
+                        <div class="col text-danger">
+                            <p class="text-danger">No longer stopping at destination</p>
+                        </div>
+                    </div>
+                }
+
+                <div class="collapse" id="@service.Guid">
+                    @{
+                        ViewData["Here"] = Model.Location;
+                        ViewData["There"] = Model.FilterLocation;
+                    }
+                    <partial name="_TrainServiceDetails" model="service" , view-data="ViewData" />
+                </div>
             </div>
         }
 
