--- a/JoF.Rail.Core.Web/Features/Boards/Fastest.cshtml
+++ b/JoF.Rail.Core.Web/Features/Boards/Fastest.cshtml
@@ -1,4 +1,7 @@
 ﻿@model JoF.Rail.Standard.Models.LiveDepartureBoard.Result.DeparturesBoardModel
+@{
+    ViewData["Title"] = "Next Fastest Departure";
+}
 
 @{
     // tiresomly, response does not contain the FilterStation...  CANNOT get flippin Linq to work...
@@ -22,10 +25,10 @@
         <div class="col-7 text-right">
             @{
                 var parms = new Dictionary<string, string>
-                            {
-                                { "crs", Model.Crs },
-                                { "filterCrs", filtered.Crs },
-                            };
+                                {
+                                    { "crs", Model.Crs },
+                                    { "filterCrs", filtered.Crs },
+                                };
             }
             <a class="btn btn-primary d-none d-sm-inline" asp-action="Departures" asp-all-route-data="parms">Departures</a>
             <a class="btn btn-primary d-sm-none" asp-action="Departures" asp-all-route-data="parms">Deps</a>
@@ -75,43 +78,44 @@
     {
         var service = departure.Service;
 
-        <div class="row pb-2">
-            <div class="col-2 text-center">@service.ScheduledTimeDeparture</div>
-            <div class="col-3">
-                @foreach (var dest in service.Destinations)
-                {
-                    <div class="d-block">@dest.Location</div>
-                    @if (dest.Via != null)
+        <div class="pb-3">
+            <div class="row pb-2">
+                <div class="col-2 text-center">@service.ScheduledTimeDeparture</div>
+                <div class="col-3">
+                    @foreach (var dest in service.Destinations)
                     {
-                        <small class="indent d-none d-sm-block">@dest.Via</small>
-                    }
-                }
-            </div>
-            <div class="col-2 text-center">@service.EstimatedTimeDeparture</div>
-            <div class="col-1 text-center">@service.EstimatedTimeDepartureDelay</div>
-            <div class="col-1 text-center">@service.Platform</div>
-            <div class="col-1 text-center">@service.TrainLength</div>
-            <div class="col-1">
-                <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#@service.Guid" aria-expanded="false" aria-controls="collapseExample">
-                    <i class="fas fa-info"></i>
-                </button>
-            </div>
-        </div>
-        @if (service.DelayReason != null || service.CancellationReason != null)
-        {
-            <div class="row">
-                <div class="col-12 text-danger">
-                    @if (service.DelayReason != null && service.CancellationReason == null)
-                    {
-                        @service.DelayReason
-                    }
-                    @if (service.CancellationReason != null)
-                    {
-                        @service.CancellationReason
+                        <div class="d-block">@dest.Location</div>
+                        @if (dest.Via != null)
+                        {
+                            <small class="indent d-none d-sm-block">@dest.Via</small>
+                        }
                     }
                 </div>
+                <div class="col-2 text-center">@service.EstimatedTimeDeparture</div>
+                <div class="col-1 text-center">@service.EstimatedTimeDepartureDelay</div>
+                <div class="col-1 text-center">@service.Platform</div>
+                <div class="col-1 text-center">@service.TrainLength</div>
+                <div class="col-1">
+                    <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#@service.Guid" aria-expanded="false" aria-controls="collapseExample">
+                        <i class="fas fa-info"></i>
+                    </button>
+                </div>
             </div>
-        }
+            @if (service.DelayReason != null || service.CancellationReason != null)
+            {
+                <div class="row">
+                    <div class="col-12 text-danger">
+                        @if (service.DelayReason != null && service.CancellationReason == null)
+                        {
+                            @service.DelayReason
+                        }
+                        @if (service.CancellationReason != null)
+                        {
+                            @service.CancellationReason
+                        }
+                    </div>
+                </div>
+            }
             <div class="collapse" id="@service.Guid">
                 @{
                     ViewData["Here"] = Model.Location;
@@ -119,6 +123,7 @@
                 }
                 <partial name="_TrainServiceDetails" model="service" , view-data="ViewData" />
             </div>
+        </div>
     }
 
     <div class="row py-3">
