--- a/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
+++ b/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/Font-Awesome/web-fonts-with-css/css/fontawesome-all.css" />
-        <link rel="stylesheet" href="~/lib/jquery-ui/themes/base/autocomplete.css" />
         <link rel="stylesheet" href="~/css/combined.css" />
     </environment>
     <environment exclude="Development">
@@ -15,7 +14,6 @@
               integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
               crossorigin="anonymous"
               asp-fallback-href="~/lib/Font-Awesome/web-fonts-with-css/css/fontawesome-all.css" />
-        <link rel="stylesheet" href="~/lib/jquery-ui/themes/base/autocomplete.css" />
         <link rel="stylesheet" href="~/css/combined.min.css" asp-append-version="true" />
     </environment>
 </head>
@@ -55,21 +53,21 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
-        </script>
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+                crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
                 asp-fallback-src="~/lib/jquery-ui/dist/jquery-ui.min.js"
                 asp-fallback-test="window.jQuery"
-                integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
+                integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
                 crossorigin="anonymous"></script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/4.1.1/bootstrap.min.js"
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-        </script>
+                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"  
+                integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+                crossorigin="anonymous"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
