--- a/JoF.Rail.Core.Web/Features/Boards/Departures.cshtml
+++ b/JoF.Rail.Core.Web/Features/Boards/Departures.cshtml
@@ -1,6 +1,7 @@
 ﻿@model JoF.Rail.Standard.Models.LiveDepartureBoard.Result.StationBoardModel
 @{
-    ViewData["Title"] = "Live Departures";
+    ViewBag.Title = "Live Departures";
+    ViewBag.BodyClass = "bg-departure-board text-departure-board";
 }
 
 @{
