--- a/JoF.Rail.Core.Web/Features/Boards/Fastest.cshtml
+++ b/JoF.Rail.Core.Web/Features/Boards/Fastest.cshtml
@@ -1,6 +1,7 @@
 ﻿@model JoF.Rail.Standard.Models.LiveDepartureBoard.Result.DeparturesBoardModel
 @{
-    ViewData["Title"] = "Next Fastest Departure";
+    ViewBag.Title = "Next Fastest Departure";
+    ViewBag.BodyClass = "bg-departure-board text-departure-board";
 }
 
 @{
