--- a/JoF.Rail.Core.Web/wwwroot/scss/site.scss
+++ b/JoF.Rail.Core.Web/wwwroot/scss/site.scss
@@ -65,8 +65,8 @@ $theme-colors: (
     "light": $off-white
 );
 
-$body-bg:       $board-grey;
-$body-color:    $board-yellow;
+$body-bg:       $off-white;
+$body-color:    $ticket-grey;
 
 $font-family-sans-serif: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
