--- a/JoF.Rail.Core.Web/Features/Shared/_Footer.cshtml
+++ b/JoF.Rail.Core.Web/Features/Shared/_Footer.cshtml
@@ -1,10 +1,14 @@
-﻿<div class="container-fluid pt-4">
-    <div class="row align-items-baseline">
-        <div class="col text-left">
-            <div><p>&copy; 2018 - TickleTiger, v0.1</p></div>
+﻿<div class="container-fluid p-4">
+    <div class="row">
+        <div class="col-12 ml-auto">
+            <a class="float-right" href="http://www.nationalrail.co.uk/46391.aspx" target="_blank">
+                <img src="~/images/NRE_Powered_logo.png" alt="Powered by National Rail Equiries" style="width: 250px" />
+            </a>
         </div>
-        <div class="col-4 text-right">
-            <div><a href="http://www.nationalrail.co.uk/46391.aspx" target="_blank"><img src="~/images/NRE_Powered_logo.png" class="float-right" alt="Powered by National Rail Equiries" style="width: 250px" /></a></div>
+    </div>
+    <div class="row small">
+        <div class="col">
+            &copy; 2018 - TickleTiger, v0.1
         </div>
     </div>
 </div>
