--- a/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
+++ b/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
@@ -20,19 +20,18 @@
 <body class="@ViewBag.BodyClass">
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-            <a class="navbar-brand" asp-controller="Boards" asp-action="Index">JoF.Rail</a>
+            @*<a class="navbar-brand" asp-controller="Boards" asp-action="Index">JoF.Rail</a>*@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                     aria-contols="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" asp-controller="Boards" asp-action="Index">Departure Boards</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Boards" asp-action="Index">Departure Boards</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="NetworkOverview" asp-action="Index">Network Overview</a></li>
                 </ul>
             </div>
-            <div class="float-right">
-                <div id="time" class="time"></div>
-            </div>
+            <div id="time" class="d-inline time"></div>
         </nav>
 
         <partial name="_CookieConsentPartial" />
