--- a/JoF.Rail.Core.Web/Features/Boards/Fastest.cshtml
+++ b/JoF.Rail.Core.Web/Features/Boards/Fastest.cshtml
@@ -75,67 +75,69 @@
         <div class="col-1 text-center d-sm-none"><strong>#</strong></div>
     </div>
 
-    @foreach (var departure in Model.Departures)
-    {
-        var service = departure.Service;
+    <div id="accordion">
+        @foreach (var departure in Model.Departures)
+        {
+            var service = departure.Service;
 
-        <div class="pb-3">
-            <div class="row pb-2">
-                <div class="col-2 text-center">@service.ScheduledTimeDeparture</div>
-                <div class="col-3">
-                    @foreach (var dest in service.Destinations)
-                    {
-                        <div class="d-block">@dest.Location</div>
-                        @if (dest.Via != null)
+            <div class="pb-3" role="button" data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="#@service.Id">
+                <div class="row pb-2">
+                    <div class="col-2 text-center">@service.ScheduledTimeDeparture</div>
+                    <div class="col-3">
+                        @foreach (var dest in service.Destinations)
                         {
-                            <small class="indent d-none d-sm-block">@dest.Via</small>
-                        }
-                    }
-                </div>
-                <div class="col-2 text-center">@service.EstimatedTimeDeparture</div>
-                <div class="col-1 text-center">@service.EstimatedTimeDepartureDelay</div>
-                <div class="col-1 text-center">@service.Platform</div>
-                <div class="col-1 text-center">@service.TrainLength</div>
-                <div class="col-1">
-                    <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="collapseExample">
-                        <i class="fas fa-info"></i>
-                    </button>
-                </div>
-            </div>
-            @if (service.DelayReason != null || service.CancellationReason != null)
-            {
-                <div class="row">
-                    <div class="col-12 text-danger">
-                        @if (service.DelayReason != null && service.CancellationReason == null)
-                        {
-                            @service.DelayReason
-                        }
-                        @if (service.CancellationReason != null)
-                        {
-                            @service.CancellationReason
+                            <div class="d-block">@dest.Location</div>
+                            @if (dest.Via != null)
+                            {
+                                <small class="indent d-none d-sm-block">@dest.Via</small>
+                            }
                         }
                     </div>
+                    <div class="col-2 text-center">@service.EstimatedTimeDeparture</div>
+                    <div class="col-1 text-center">@service.EstimatedTimeDepartureDelay</div>
+                    <div class="col-1 text-center">@service.Platform</div>
+                    <div class="col-1 text-center">@service.TrainLength</div>
+                    <div class="col-1">
+                        <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="collapseExample">
+                            <i class="fas fa-info"></i>
+                        </button>
+                    </div>
                 </div>
-            }
-            <div class="collapse" id="@service.Id">
-                @{
-                    ViewData["Here"] = Model.Location;
-                    ViewData["There"] = filtered.Location;
+                @if (service.DelayReason != null || service.CancellationReason != null)
+                {
+                    <div class="row">
+                        <div class="col-12 text-danger">
+                            @if (service.DelayReason != null && service.CancellationReason == null)
+                            {
+                                @service.DelayReason
+                            }
+                            @if (service.CancellationReason != null)
+                            {
+                                @service.CancellationReason
+                            }
+                        </div>
+                    </div>
                 }
-                <partial name="_TrainServiceDetails" model="service" , view-data="ViewData" />
+                <div class="collapse" id="@service.Id" aria-labelledby="@service.Id" data-parent="#accordion">
+                    @{
+                        ViewData["Here"] = Model.Location;
+                        ViewData["There"] = filtered.Location;
+                    }
+                    <partial name="_TrainServiceDetails" model="service" , view-data="ViewData" />
+                </div>
             </div>
+        }
         </div>
-    }
 
-    <div class="row py-3">
-        <small class="col-12 text-right">@Model.GeneratedAt</small>
+        <div class="row py-3">
+            <small class="col-12 text-right">@Model.GeneratedAt</small>
+        </div>
+
+        <small class="row d-sm-none pb-3">
+            <div class="col">
+                <i class="fas fa-clock"></i> - Delay, minutes
+                <div>P - Platform number</div>
+                <div># - Number of coaches</div>
+            </div>
+        </small>
     </div>
-
-    <small class="row d-sm-none pb-3">
-        <div class="col">
-            <i class="fas fa-clock"></i> - Delay, minutes
-            <div>P - Platform number</div>
-            <div># - Number of coaches</div>
-        </div>
-    </small>
-</div>
