--- a/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
+++ b/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
@@ -7,14 +7,14 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/Font-Awesome/web-fonts-with-css/css/fontawesome-all.css" />
-        <link rel="stylesheet" href="~/css/combined.css" />
+        <link rel="stylesheet" href="~/dist/css/combined.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
               integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
               crossorigin="anonymous"
               asp-fallback-href="~/lib/Font-Awesome/web-fonts-with-css/css/fontawesome-all.css" />
-        <link rel="stylesheet" href="~/css/combined.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/dist/css/combined.min.css" asp-append-version="true" />
     </environment>
 </head>
 <body class="@ViewBag.BodyClass">
@@ -67,7 +67,7 @@
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"  
                 integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
                 crossorigin="anonymous"></script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/dist/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
