--- a/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
+++ b/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
@@ -6,14 +6,14 @@
     <title>@ViewData["Title"] - JoF.Rail</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/Font-Awesome/web-fonts-with-css/css/fontawesome-all.css" />
-        <link rel="stylesheet" href="~/dist/css/combined.css" />
+        <link rel="stylesheet" href="~/build/css/fontawesome-all.css" />
+        <link rel="stylesheet" href="~/build/css/combined.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
               integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
               crossorigin="anonymous"
-              asp-fallback-href="~/lib/Font-Awesome/web-fonts-with-css/css/fontawesome-all.css" />
+              asp-fallback-href="~/dist/fontawesome-all.min.css" />
         <link rel="stylesheet" href="~/dist/css/combined.min.css" asp-append-version="true" />
     </environment>
 </head>
@@ -53,17 +53,17 @@
     </environment>
     <environment exclude="Development">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                asp-fallback-src="~/dist/js/jquery.min.js"
                 asp-fallback-test="window.jQuery"
                 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
                 crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-                asp-fallback-src="~/lib/jquery-ui/dist/jquery-ui.min.js"
+                asp-fallback-src="~/dist/js/jquery-ui.min.js"
                 asp-fallback-test="window.jQuery"
                 integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
                 crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+                asp-fallback-src="~/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"  
                 integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
                 crossorigin="anonymous"></script>
