Fixed gulp for sass, added menu to Map

--- a/JoF.Rail.Core.Web/Features/Maps/Station.cshtml
+++ b/JoF.Rail.Core.Web/Features/Maps/Station.cshtml
@@ -4,7 +4,7 @@
 
 <h2>Station Map</h2>
 
-<div id="stationMap" class="w-100" style="width:600px; height: 600px;">&nbsp;</div>
+<div id="stationMap" class="w-100">&nbsp;</div>
 
 @section Scripts {
     <script>
