--- a/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
+++ b/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" asp-controller="Boards" asp-action="Index">Departure Boards</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="NetworkOverview" asp-action="Index">Network Overview</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Maps" asp-action="Station">Map</a></li>
                 </ul>
             </div>
             <div id="time" class="d-inline time"></div>
