Adding historical performance data

--- a/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
+++ b/JoF.Rail.Core.Web/Features/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                     <li class="nav-item"><a class="nav-link" asp-controller="Boards" asp-action="Index">Departure Boards</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="NetworkOverview" asp-action="Index">Network Overview</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Maps" asp-action="Station">Map</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Historical" asp-action="Index">Historical Performance</a></li>
                 </ul>
             </div>
             <div id="time" class="d-inline time"></div>
